--- a/MacBook M1.conf
+++ b/MacBook M1.conf
@@ -62,7 +62,7 @@ static=AppStore, 🇨🇳 回国, 美国, img-url=https://github.com/General7411
 #*******************************************************************************
 static=TestFlight, 🇨🇳 回国, 美国, img-url=https://github.com/General74110/mini/raw/master/Alpha/testflight.png
 #*******************************************************************************
-static=SteanCN, 🇨🇳 回国, img-url=https://raw.githubusercontent.com/General74110/PNG/master/steam.png
+static=Stean, 🇨🇳 回国, img-url=https://raw.githubusercontent.com/General74110/PNG/master/steam.png
 #*******************************************************************************
 static=网易云音乐, 🇨🇳 回国, img-url=https://github.com/General74110/mini/raw/master/Alpha/Netease.png
 #*******************************************************************************
@@ -124,7 +124,7 @@ https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/QuantumultX/Appl
 #*******************************************************************************
 https://raw.githubusercontent.com/General74110/QuantumultX/main/NeteaseMusic.list, tag=网易云音乐, update-interval=86400, opt-parser=false, enabled=true
 #*******************************************************************************
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/SteamCN/SteamCN.list, tag=SteamCN, update-interval=86400, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Steam/Steam.list, tag=Steam, update-interval=86400, opt-parser=true, enabled=true
 #*******************************************************************************
 https://github.com/General74110/ios_rule_script/raw/master/rule/QuantumultX/Google/Google.list, tag=Google, update-interval=86400, opt-parser=false, enabled=true
 #*******************************************************************************
