--- a/MacBook M1.conf
+++ b/MacBook M1.conf
@@ -62,7 +62,7 @@ static=AppStore, 🇨🇳 回国, 美国, img-url=https://github.com/General7411
 #*******************************************************************************
 static=TestFlight, 🇨🇳 回国, 美国, img-url=https://github.com/General74110/mini/raw/master/Alpha/testflight.png
 #*******************************************************************************
-static=Stean, 🇨🇳 回国, img-url=https://raw.githubusercontent.com/General74110/PNG/master/steam.png
+static=Steam, 🇨🇳 回国, img-url=https://raw.githubusercontent.com/General74110/PNG/master/steam.png
 #*******************************************************************************
 static=网易云音乐, 🇨🇳 回国, img-url=https://github.com/General74110/mini/raw/master/Alpha/Netease.png
 #*******************************************************************************
