--- a/MacBook M1.conf
+++ b/MacBook M1.conf
@@ -116,7 +116,7 @@ https://raw.githubusercontent.com/General74110/QuantumultX/main/Hijacking.list, 
 #*******************************************************************************
 https://raw.githubusercontent.com/General74110/QuantumultX/main/Privacy.list, tag=隐私保护, update-interval=86400, opt-parser=false, enabled=false
 #*******************************************************************************
-https://raw.githubusercontent.com/General74110/QuantumultX/main/Advertising.list, tag=📵 广告拦截, img-url=https://raw.githubusercontent.com/General74110/PNG/master/Advertising.png, update-interval=86400, opt-parser=true, enabled=false
+https://raw.githubusercontent.com/General74110/QuantumultX/main/Advertising.list, tag=广告拦截, img-url=https://raw.githubusercontent.com/General74110/PNG/master/Advertising.png, update-interval=86400, opt-parser=true, enabled=false
 #*******************************************************************************
 https://github.com/General74110/ios_rule_script/raw/master/rule/QuantumultX/TestFlight/TestFlight.list, tag=Test Flight, update-interval=86400, opt-parser=false, enabled=true
 #*******************************************************************************
