--- a/QuanX/Rewrite_Remote.conf
+++ b/QuanX/Rewrite_Remote.conf
@@ -1,4 +1,4 @@
-hostname = www.google.cn, newapp.szsmk.com, home.mi.com, api2.mina.mi.com, api.rr.tv, mobile-api.adguard.com, api.m.jd.com, m*.amap.com, *.cp31.ott.cibntv.net, act.vip.iqiyi.com, img*.360buyimg.com, mp.weixin.qq.com,duckduckgo.com
+hostname = www.google.cn, newapp.szsmk.com, home.mi.com, api2.mina.mi.com, api.rr.tv, mobile-api.adguard.com, api.m.jd.com, m*.amap.com, act.vip.iqiyi.com, img*.360buyimg.com, mp.weixin.qq.com,duckduckgo.com
 
 # > WeChat Official Account
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url response-body "advertisement_num":\d,"advertisement_info":\[.+\], response-body "advertisement_num":0,"advertisement_info":[],
@@ -6,14 +6,6 @@ hostname = www.google.cn, newapp.szsmk.com, home.mi.com, api2.mina.mi.com, api.r
 # URL Rewrite
 # > Redirect Google Search Service
 ^(http|https):\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
-
-# > Redirect Google Maps Service
-^(http|https):\/\/(ditu|maps).google\.cn url 302 https://maps.google.com
-
-# > Redirect HTTP to HTTPS
-^(http|https):\/\/(www.)?taobao\.com\/ url 302 https://taobao.com/
-^(http|https):\/\/(www.)?jd\.com\/ url 302 https://www.jd.com/
-^(http|https):\/\/(www.)?mi\.com\/ url 302 https://www.mi.com/
 
 # > Citizen Card
 ^https:\/\/newapp\.szsmk\.com\/app\/config\/queryMainAd url reject
@@ -34,10 +26,6 @@ https:\/\/api2\.mina\.mi\.com\/banner\/get url reject
 # > AMap - m*.amap.com
 ^https?:\/\/m\d\.amap\.com\/ws\/valueadded\/alimama\/splash_screen\/ url reject
 
-# > YOUKU - *.cp31.ott.cibntv.net
-^https?:\/\/[\w-.]+\.ott\.cibntv\.net\/[\w\/-]+.mp4\?sid= url reject
-^http:\/\/.*\.cp31\.ott\.cibntv\.net\/youku\/ url reject
-
 # > iQIYI - act.vip.iqiyi.com
 ^https?:\/\/iface\.iqiyi\.com\/api\/getNewAdInfo url reject
 ^https?:\/\/act\.vip\.iqiyi\.com\/interact\/api\/show\.do url reject
@@ -49,7 +37,7 @@ https:\/\/api2\.mina\.mi\.com\/banner\/get url reject
 ^https?:\/\/(bdsp-x|dsp-x)\.jd\.com\/adx\/ url reject
 ^https?:\/\/img\d+\.360buyimg\.com\/jddjadvertise\/ url reject
 
-# > Q-Search--------------------------------------------
+# > Q-Search
 # dlc xxx (DeepL 译至中)
 ^https:\/\/duckduckgo.com\/\?q=dlc(\+|%20)([^&]+).+ url script-echo-response https://raw.githubusercontent.com/zZPiglet/Task/master/asset/DeepLQ-search.js
 # dle xxx (DeepL 译至英)
@@ -66,9 +54,6 @@ https:\/\/api2\.mina\.mi\.com\/banner\/get url reject
 # > Script
 # > AdGuard
 ^https?:\/\/mobile-api\.adguard\.com\/api\/\d(|\.\d)\/ios_validate_receipt$ url script-response-body https://raw.githubusercontent.com/Hikote/Free/master/Surge/Script/AdGuard.js
-
-# > JD Pricing History (By yichahucha)
-^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
 
 # > Boxjs
 ^https?://boxjs.net url script-analyze-echo-response https://raw.githubusercontent.com/chavyleung/scripts/master/box/chavy.boxjs.js
