--- a/QuanX/Cookie_Remote.conf
+++ b/QuanX/Cookie_Remote.conf
@@ -13,6 +13,9 @@ https:\/\/mkt\.21cn\.com\/mkt\/api\/user\/queryActivityInfo\.do\?activityId=\d+ 
 # 人人视频
 ;^https:\/\/api\.rr\.tv\/user\/profile url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.cookie.js
 
+# CCCAT
+https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/glados/checkincookie_env.js
+
 # 网易云音乐 - 1.先登录: https://music.163.com/m/login 2.再访问: https://music.163.com/#/user/level 3.提示: 获取会话: 成功!
 ^https:\/\/music.163.com\/weapi\/user\/level url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.cookie.js
 
