--- a/QuanX/Cookie_Remote.conf
+++ b/QuanX/Cookie_Remote.conf
@@ -1,4 +1,4 @@
-hostname = ifac*.iqiyi.com,e.189.cn, mkt.21cn.com, *.rr.tv,music.163.com,cloud.umetrip.com,common.diditaxi.com.cn,account.huami.com,club.yili.com
+hostname = ifac*.iqiyi.com,e.189.cn, mkt.21cn.com, *.rr.tv,music.163.com,cloud.umetrip.com,common.diditaxi.com.cn,account.huami.com,club.yili.com,cccat.io
 
 # JD - 京东网址 https://bean.m.jd.com/bean/signIndex.action 签到
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
