--- a/MacBook M1.conf
+++ b/MacBook M1.conf
@@ -152,9 +152,9 @@ https://github.com/General74110/ios_rule_script/raw/master/rule/QuantumultX/Wiki
 [rewrite_remote]
 #——————————————————————————————————————————————————————————————————————————-----
 #*******************************************************************************
-https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Get_Cookie_New.conf, tag=Get-Cookie, update-interval=86400, opt-parser=false, enabled=true
+https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rewrite/QuantumultX/GetCookie/GetCookie.conf, tag=Get-Cookie, update-interval=86400, opt-parser=false, enabled=true
 #*******************************************************************************
-https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJs（BoxJs地址：http://boxjs.com）, update-interval=86400, opt-parser=true, enabled=true
+https://cdn.jsdelivr.net/gh/chavyleung/scripts@master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJs（BoxJs地址：http://boxjs.com）, update-interval=86400, opt-parser=true, enabled=true
 #*******************************************************************************
 https://raw.githubusercontent.com/General74110/QuantumultX/main/JS.conf, tag=解锁, update-interval=86400, opt-parser=true, enabled=false
 #*******************************************************************************
