--- a/MacBook M1.conf
+++ b/MacBook M1.conf
@@ -109,7 +109,7 @@ url-latency-benchmark=日本, server-tag-regex=(?=.*(日本|JP|(?i)Japan))^((?!(
 # 部分规则有先后顺序要求，调整顺序可能失效
 [filter_remote]
 #——————————————————————————————————————————————————————————————————————————-----
-https://cdn.jsdelivr.net/gh/General74110/ios_rule_script@master/rule/QuantumultX/Advertising/Advertising.list, tag=广告拦截, update-interval=86400, opt-parser=true, enabled=false
+https://cdn.jsdelivr.net/gh/General74110/ios_rule_script@master/rule/QuantumultX/Advertising/Advertising.list, tag=广告拦截, update-interval=86400, opt-parser=true, enabled=true
 #*******************************************************************************
 https://cdn.jsdelivr.net/gh/General74110/ios_rule_script@master/rule/QuantumultX/TestFlight/TestFlight.list, tag=Test Flight, update-interval=86400, opt-parser=false, enabled=true
 #*******************************************************************************
