--- a/QuantumultX/Rewrite/Script.conf
+++ b/QuantumultX/Rewrite/Script.conf
@@ -32,7 +32,7 @@ hostname = weixin110.qq.com,testflight.apple.com,greasyfork.org,openuserjs.org,t
 
 # ---(By yichahucha)---
 # > jd_price
-^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
+#^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
 # > tb_price
 #^http://.+/amdc/mobileDispatch url script-request-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
 #^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
