--- a/O7Y0-Quantumult X-icon.conf
+++ b/O7Y0-Quantumult X-icon.conf
@@ -65,6 +65,7 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Quantumult/Rewrit
 [server_local]
 
 [filter_local]
+host-suffix, m.gwdang.com, proxy
 host-suffix, local, direct
 ip-cidr, 192.168.0.0/16, direct
 ip-cidr, 10.0.0.0/8, direct
