--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -110,8 +110,9 @@
 ^https:\/\/app\.bilibili\.com\/bilibili\.app\.(view\.v1\.View\/View|dynamic\.v2\.Dynamic\/DynAll)$ url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_proto.js
 
 # 微博 //*.uve.weibo.com, api.weibo.cn, mapi.weibo.com
-## 去除开屏广告 //*.uve.weibo.com
-^https?:\/\/(sdkapp|wbapp|fastimage)\.uve\.weibo\.com(\/interface\/sdk\/sdkad\.php|\/wbapplua\/wbpullad\.lua) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_launch.js
+## 去除开屏广告 //sdkapp.uve.weibo.com
+^https:\/\/sdkapp\.uve\.weibo\.com\/interface\/sdk\/sdkad\.php$ url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_sdkad.js
+
 ## 去除信息流广告和各种推广模块 //api.weibo.com, mapi.weibo.cn
 ^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/(cardlist|searchall|page|statuses\/(unread_)?friends(\/|_)timeline|groups\/timeline|statuses\/(unread_hot_timeline|extend|video_mixtimeline)|profile\/(me|statuses)|video\/(community_tab|remind_info|tiny_stream_video_list)|checkin\/show|\/!\/live\/media_homelist|comments\/build_comments|container\/get_item|search\/(finder|container_timeline|container_discover)) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_main.js
 ## 屏蔽卡片挂件 //vip.storage.weibo.com
