--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -1,5 +1,5 @@
 # utf-8
-# 2022-07-10 10:13
+# 2022-07-12 11:01
 # 对【哔哩哔哩、微博、油管、知乎】的开屏广告和应用内广告进行处理，是对【AdvertisingLite.conf】的去重和补充
 
 # 引用地址 https://github.com/ddgksf2013/Cuttlefish/blob/master/Rewrite/MyAdRule.conf
@@ -109,12 +109,26 @@
 ## proto去广告 //app.bilibili.com
 ^https:\/\/app\.bilibili\.com\/bilibili\.app\.(view\.v1\.View\/View|dynamic\.v2\.Dynamic\/DynAll)$ url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_proto.js
 
-# 微博 //*.uve.weibo.com, api.weibo.cn, mapi.weibo.com
+# 微博 //sdkapp.uve.weibo.com, api.weibo.cn, mapi.weibo.com
 ## 去除开屏广告 //sdkapp.uve.weibo.com
+;^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_launch.js
 ^https:\/\/sdkapp\.uve\.weibo\.com\/interface\/sdk\/sdkad\.php$ url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_sdkad.js
-
+## 微博下面的评论 //api.weibo.cn, mapi.weibo.com
+^https:\/\/(api\.weibo\.cn|mapi\.weibo\.com)\/2\/comments\/build_comments\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_comment.js
+## 微博 推荐 热门/榜单/放映厅 https://api.weibo.cn/2/statuses/unread_hot_timeline?
+## 微博 最新微博 https://api.weibo.cn/2/statuses/friends/timeline?
+## 视频流 (短视频上划，微博继续推荐新视频) https://api.weibo.cn/2/video/tiny_stream_video_list?
+## 微博 全部关注 https://api.weibo.cn/2/statuses/unread_friends_timeline?
+^https:\/\/(api\.weibo\.cn|mapi\.weibo\.com)\/2\/(statuses\/unread_hot_timeline|statuses\/friends\/timeline|video\/tiny_stream_video_list|statuses\/unread_friends_timeline)\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_statuses.js
+## 发现 搜索 https://api.weibo.cn/2/searchall?
+## 超话 帖子/精华/官方 https://api.weibo.cn/2/page?
+^https:\/\/(api\.weibo\.cn|mapi\.weibo\.com)\/2\/(searchall|page)\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_cardlist.js
+## 发现 热点（这货特殊，有卡片广告） https://api.weibo.cn\/2\/cardlist?
+^https:\/\/(api\.weibo\.cn|mapi\.weibo\.com)\/2\/cardlist\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_cardlist_discover.js
+## 每条微博下面 创作者广告共享计划
+^https:\/\/(api\.weibo\.cn|mapi\.weibo\.com)\/2\/statuses\/extend\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_statuses_extend.js
 ## 去除信息流广告和各种推广模块 //api.weibo.com, mapi.weibo.cn
-^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/(cardlist|searchall|page|statuses\/(unread_)?friends(\/|_)timeline|groups\/timeline|statuses\/(unread_hot_timeline|extend|video_mixtimeline)|profile\/(me|statuses)|video\/(community_tab|remind_info|tiny_stream_video_list)|checkin\/show|\/!\/live\/media_homelist|comments\/build_comments|container\/get_item|search\/(finder|container_timeline|container_discover)) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_main.js
+;^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/(cardlist|searchall|page|statuses\/(unread_)?friends(\/|_)timeline|groups\/timeline|statuses\/(unread_hot_timeline|extend|video_mixtimeline)|profile\/(me|statuses)|video\/(community_tab|remind_info|tiny_stream_video_list)|checkin\/show|\/!\/live\/media_homelist|comments\/build_comments|container\/get_item|search\/(finder|container_timeline|container_discover)) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_main.js
 ## 屏蔽卡片挂件 //vip.storage.weibo.com
 ^https?:\/\/vip\.storage\.weibo\.com\/feed_cover\/.*\.png url reject-200
 
@@ -188,4 +202,4 @@
 ## 拦截知乎开屏广告 //api.zhihu.com
 ^https?:\/\/api\.zhihu\.com\/commercial_api\/launch_v2\? url reject-dict
 
-hostname = zimuku.pw, zimuku.org, amdc.m.taobao.com, cdn.*.chelaileapp.cn, gab.122.gov.cn, links.jianshu.com, www.jianshu.com, weibo.cn, shop.sc.weibo.com, t.cn, sinaurl.cn, link.zhihu.com, ad.12306.cn, edith.xiaohongshu.com, mp.weixin.qq.com, weixin110.qq.com, security.wechat.com, app.bilibili.com, api.bilibili.com, api.biliapi.net, app.biliintl.com, passport.biliintl.com, api.vc.bilibili.com, manga.bilibili.com, api.live.bilibili.com, *.uve.weibo.com, api.weibo.cn, mapi.weibo.com, vip.storage.weibo.com, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com, 103.41.167.226, 103.41.167.234, 103.41.167.235, 103.41.167.236, api.zhihu.com, appcloud2.zhihu.com, www.zhihu.com, zhuanlan.zhihu.com, static.zhihu.com
+hostname = zimuku.pw, zimuku.org, amdc.m.taobao.com, cdn.*.chelaileapp.cn, gab.122.gov.cn, links.jianshu.com, www.jianshu.com, weibo.cn, shop.sc.weibo.com, t.cn, sinaurl.cn, link.zhihu.com, ad.12306.cn, edith.xiaohongshu.com, mp.weixin.qq.com, weixin110.qq.com, security.wechat.com, app.bilibili.com, api.bilibili.com, api.biliapi.net, app.biliintl.com, passport.biliintl.com, api.vc.bilibili.com, manga.bilibili.com, api.live.bilibili.com, sdkapp.uve.weibo.com, api.weibo.cn, mapi.weibo.com, vip.storage.weibo.com, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com, 103.41.167.226, 103.41.167.234, 103.41.167.235, 103.41.167.236, api.zhihu.com, appcloud2.zhihu.com, www.zhihu.com, zhuanlan.zhihu.com, static.zhihu.com
