--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -1,5 +1,5 @@
 # utf-8
-# 2022-07-12 11:01
+# 2022-07-12 11:03
 # 对【哔哩哔哩、微博、油管、知乎】的开屏广告和应用内广告进行处理，是对【AdvertisingLite.conf】的去重和补充
 
 # 引用地址 https://github.com/ddgksf2013/Cuttlefish/blob/master/Rewrite/MyAdRule.conf
@@ -123,7 +123,7 @@
 ## 发现 搜索 https://api.weibo.cn/2/searchall?
 ## 超话 帖子/精华/官方 https://api.weibo.cn/2/page?
 ^https:\/\/(api\.weibo\.cn|mapi\.weibo\.com)\/2\/(searchall|page)\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_cardlist.js
-## 发现 热点（这货特殊，有卡片广告） https://api.weibo.cn\/2\/cardlist?
+## 发现 热点 (这货特殊，有卡片广告) https://api.weibo.cn\/2\/cardlist?
 ^https:\/\/(api\.weibo\.cn|mapi\.weibo\.com)\/2\/cardlist\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_cardlist_discover.js
 ## 每条微博下面 创作者广告共享计划
 ^https:\/\/(api\.weibo\.cn|mapi\.weibo\.com)\/2\/statuses\/extend\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_statuses_extend.js
