--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -109,10 +109,10 @@
 ## proto去广告 //app.bilibili.com
 ^https:\/\/app\.bilibili\.com\/bilibili\.app\.(view\.v1\.View\/View|dynamic\.v2\.Dynamic\/DynAll)$ url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_proto.js
 
-# 微博 //sdkapp.uve.weibo.com, api.weibo.cn, mapi.weibo.com
-## 去除开屏广告 //sdkapp.uve.weibo.com
-;^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_launch.js
-^https:\/\/sdkapp\.uve\.weibo\.com\/interface\/sdk\/sdkad\.php$ url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_sdkad.js
+# 微博 //*.uve.weibo.com, api.weibo.cn, mapi.weibo.com
+## 去除开屏广告 //*.uve.weibo.com
+;^https?:\/\/(sdk|wb)app\.uve\.weibo\.com(\/interface\/sdk\/sdkad\.php|\/wbapplua\/wbpullad\.lua) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_launch.js
+^https?:\/\/(sdk|wb)app\.uve\.weibo\.com(\/interface\/sdk\/sdkad\.php|\/wbapplua\/wbpullad\.lua) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_sdkad.js
 ## 微博下面的评论 //api.weibo.cn, mapi.weibo.com
 ^https:\/\/(api\.weibo\.cn|mapi\.weibo\.com)\/2\/comments\/build_comments\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_comment.js
 ## 微博 推荐 热门/榜单/放映厅 https://api.weibo.cn/2/statuses/unread_hot_timeline?
@@ -202,4 +202,4 @@
 ## 拦截知乎开屏广告 //api.zhihu.com
 ^https?:\/\/api\.zhihu\.com\/commercial_api\/launch_v2\? url reject-dict
 
-hostname = zimuku.pw, zimuku.org, amdc.m.taobao.com, cdn.*.chelaileapp.cn, gab.122.gov.cn, links.jianshu.com, www.jianshu.com, weibo.cn, shop.sc.weibo.com, t.cn, sinaurl.cn, link.zhihu.com, ad.12306.cn, edith.xiaohongshu.com, mp.weixin.qq.com, weixin110.qq.com, security.wechat.com, app.bilibili.com, api.bilibili.com, api.biliapi.net, app.biliintl.com, passport.biliintl.com, api.vc.bilibili.com, manga.bilibili.com, api.live.bilibili.com, sdkapp.uve.weibo.com, api.weibo.cn, mapi.weibo.com, vip.storage.weibo.com, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com, 103.41.167.226, 103.41.167.234, 103.41.167.235, 103.41.167.236, api.zhihu.com, appcloud2.zhihu.com, www.zhihu.com, zhuanlan.zhihu.com, static.zhihu.com
+hostname = zimuku.pw, zimuku.org, amdc.m.taobao.com, cdn.*.chelaileapp.cn, gab.122.gov.cn, links.jianshu.com, www.jianshu.com, weibo.cn, shop.sc.weibo.com, t.cn, sinaurl.cn, link.zhihu.com, ad.12306.cn, edith.xiaohongshu.com, mp.weixin.qq.com, weixin110.qq.com, security.wechat.com, app.bilibili.com, api.bilibili.com, api.biliapi.net, app.biliintl.com, passport.biliintl.com, api.vc.bilibili.com, manga.bilibili.com, api.live.bilibili.com, *.uve.weibo.com, api.weibo.cn, mapi.weibo.com, vip.storage.weibo.com, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com, 103.41.167.226, 103.41.167.234, 103.41.167.235, 103.41.167.236, api.zhihu.com, appcloud2.zhihu.com, www.zhihu.com, zhuanlan.zhihu.com, static.zhihu.com
