--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -114,19 +114,19 @@
 ;^https?:\/\/(sdk|wb)app\.uve\.weibo\.com(\/interface\/sdk\/sdkad\.php|\/wbapplua\/wbpullad\.lua) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_launch.js
 ^https?:\/\/(sdk|wb)app\.uve\.weibo\.com(\/interface\/sdk\/sdkad\.php|\/wbapplua\/wbpullad\.lua) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_sdkad.js
 ## 微博下面的评论 //api.weibo.cn, mapi.weibo.com
-^https:\/\/(api\.weibo\.cn|mapi\.weibo\.com)\/2\/comments\/build_comments\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_comment.js
-## 微博 推荐 热门/榜单/放映厅 https://api.weibo.cn/2/statuses/unread_hot_timeline?
-## 微博 最新微博 https://api.weibo.cn/2/statuses/friends/timeline?
-## 视频流 (短视频上划，微博继续推荐新视频) https://api.weibo.cn/2/video/tiny_stream_video_list?
-## 微博 全部关注 https://api.weibo.cn/2/statuses/unread_friends_timeline?
-^https:\/\/(api\.weibo\.cn|mapi\.weibo\.com)\/2\/(statuses\/unread_hot_timeline|statuses\/friends\/timeline|video\/tiny_stream_video_list|statuses\/unread_friends_timeline)\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_statuses.js
-## 发现 搜索 https://api.weibo.cn/2/searchall?
-## 超话 帖子/精华/官方 https://api.weibo.cn/2/page?
-^https:\/\/(api\.weibo\.cn|mapi\.weibo\.com)\/2\/(searchall|page)\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_cardlist.js
+^https:\/\/(api\.weibo\.cn|mapi\.weibo\.com)\/\d\/comments\/build_comments\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_comment.js
+## 微博 推荐 热门/榜单/放映厅 https://api.weibo.cn/\d/statuses/unread_hot_timeline?
+## 微博 最新微博 https://api.weibo.cn/\d/statuses/friends/timeline?
+## 视频流 (短视频上划，微博继续推荐新视频) https://api.weibo.cn/\d/video/tiny_stream_video_list?
+## 微博 全部关注 https://api.weibo.cn/\d/statuses/unread_friends_timeline?
+^https:\/\/(api\.weibo\.cn|mapi\.weibo\.com)\/\d\/(statuses\/unread_hot_timeline|statuses\/friends\/timeline|video\/tiny_stream_video_list|statuses\/unread_friends_timeline)\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_statuses.js
+## 发现 搜索 https://api.weibo.cn/\d/searchall?
+## 超话 帖子/精华/官方 https://api.weibo.cn/\d/page?
+^https:\/\/(api\.weibo\.cn|mapi\.weibo\.com)\/\d\/(searchall|page)\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_cardlist.js
 ## 发现 热点 (这货特殊，有卡片广告) https://api.weibo.cn\/2\/cardlist?
-^https:\/\/(api\.weibo\.cn|mapi\.weibo\.com)\/2\/cardlist\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_cardlist_discover.js
+^https:\/\/(api\.weibo\.cn|mapi\.weibo\.com)\/\d\/cardlist\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_cardlist_discover.js
 ## 每条微博下面 创作者广告共享计划
-^https:\/\/(api\.weibo\.cn|mapi\.weibo\.com)\/2\/statuses\/extend\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_statuses_extend.js
+^https:\/\/(api\.weibo\.cn|mapi\.weibo\.com)\/\d\/statuses\/extend\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_statuses_extend.js
 ## 去除信息流广告和各种推广模块 //api.weibo.com, mapi.weibo.cn
 ;^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/(cardlist|searchall|page|statuses\/(unread_)?friends(\/|_)timeline|groups\/timeline|statuses\/(unread_hot_timeline|extend|video_mixtimeline)|profile\/(me|statuses)|video\/(community_tab|remind_info|tiny_stream_video_list)|checkin\/show|\/!\/live\/media_homelist|comments\/build_comments|container\/get_item|search\/(finder|container_timeline|container_discover)) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_main.js
 ## 屏蔽卡片挂件 //vip.storage.weibo.com
