--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -1,5 +1,5 @@
 # utf-8
-# 2022-07-12 11:10
+# 2022-07-12 11:20
 # 对【哔哩哔哩、微博、油管、知乎】的开屏广告和应用内广告进行处理，是对【AdvertisingLite.conf】的去重和补充
 
 # 引用地址 https://github.com/ddgksf2013/Cuttlefish/blob/master/Rewrite/MyAdRule.conf
@@ -109,7 +109,7 @@
 ## proto去广告 //app.bilibili.com
 ^https:\/\/app\.bilibili\.com\/bilibili\.app\.(view\.v1\.View\/View|dynamic\.v2\.Dynamic\/DynAll)$ url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_proto.js
 
-# 微博 //*.uve.weibo.com, api.weibo.cn, mapi.weibo.com
+# 微博 //*.uve.weibo.com, api.weibo.cn, mapi.weibo.com, vip.storage.weibo.com
 ## 去除开屏广告 //*.uve.weibo.com
 ;^https?:\/\/(sdk|wb)app\.uve\.weibo\.com(\/interface\/sdk\/sdkad\.php|\/wbapplua\/wbpullad\.lua) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_launch.js
 ^https?:\/\/(sdk|wb)app\.uve\.weibo\.com(\/interface\/sdk\/sdkad\.php|\/wbapplua\/wbpullad\.lua) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/WeiBo/weibo_sdkad.js
@@ -133,13 +133,14 @@
 ^https?:\/\/vip\.storage\.weibo\.com\/feed_cover\/.*\.png url reject-200
 
 # 油管 //-redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com
-(^https?:\/\/[\w-]+\.googlevideo\.com\/(?!dclk_video_ads).+?)&ctier=L(&.+?),ctier,(.+) url 302 $1$2$3
-^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad url reject
-
-^https?:\/\/youtubei\.googleapis\.com\/youtubei\/v\d\/player\/ad_break url reject
-^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads url reject
-^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) url reject
-^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext url reject
+;(^https?:\/\/[\w-]+\.googlevideo\.com\/(?!dclk_video_ads).+?)&ctier=L(&.+?),ctier,(.+) url 302 $1$2$3
+;^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad url reject
+;^https?:\/\/youtubei\.googleapis\.com\/youtubei\/v\d\/player\/ad_break url reject
+;^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads url reject
+;^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) url reject
+;^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext url reject
+^https://[^.]+\.googlevideo\.com/.+&oad= url REJECT
+^https://[^.]+\.googlevideo\.com/.+&ctier=[^A]& url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/youtube.js
 
 # 知乎 //103.41.167.226, 103.41.167.234, 103.41.167.235, 103.41.167.236, api.zhihu.com, appcloud2.zhihu.com, www.zhihu.com, zhuanlan.zhihu.com, static.zhihu.com
 ## 知乎的广告拦截，依赖于拦截 118.89.204.198 和 2402:4e00:1200:ed00:0:9089:6dac:96b6 这两个地址的请求，迫使知乎 APP 回退到以 api.zhihu.com 请求数据，才能进行 MITM
@@ -202,4 +203,4 @@
 ## 拦截知乎开屏广告 //api.zhihu.com
 ^https?:\/\/api\.zhihu\.com\/commercial_api\/launch_v2\? url reject-dict
 
-hostname = zimuku.pw, zimuku.org, amdc.m.taobao.com, cdn.*.chelaileapp.cn, gab.122.gov.cn, links.jianshu.com, www.jianshu.com, weibo.cn, shop.sc.weibo.com, t.cn, sinaurl.cn, link.zhihu.com, ad.12306.cn, edith.xiaohongshu.com, mp.weixin.qq.com, weixin110.qq.com, security.wechat.com, app.bilibili.com, api.bilibili.com, api.biliapi.net, app.biliintl.com, passport.biliintl.com, api.vc.bilibili.com, manga.bilibili.com, api.live.bilibili.com, *.uve.weibo.com, api.weibo.cn, mapi.weibo.com, vip.storage.weibo.com, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com, 103.41.167.226, 103.41.167.234, 103.41.167.235, 103.41.167.236, api.zhihu.com, appcloud2.zhihu.com, www.zhihu.com, zhuanlan.zhihu.com, static.zhihu.com
+hostname = zimuku.pw, zimuku.org, amdc.m.taobao.com, cdn.*.chelaileapp.cn, gab.122.gov.cn, links.jianshu.com, www.jianshu.com, weibo.cn, shop.sc.weibo.com, t.cn, sinaurl.cn, link.zhihu.com, ad.12306.cn, edith.xiaohongshu.com, mp.weixin.qq.com, weixin110.qq.com, security.wechat.com, app.bilibili.com, api.bilibili.com, api.biliapi.net, app.biliintl.com, passport.biliintl.com, api.vc.bilibili.com, manga.bilibili.com, api.live.bilibili.com, *.uve.weibo.com, api.weibo.cn, mapi.weibo.com, vip.storage.weibo.com, *.googlevideo.com, 103.41.167.226, 103.41.167.234, 103.41.167.235, 103.41.167.236, api.zhihu.com, appcloud2.zhihu.com, www.zhihu.com, zhuanlan.zhihu.com, static.zhihu.com
