--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -1,5 +1,5 @@
 # utf-8
-# 2022-07-12 11:21
+# 2022-07-12 11:22
 # 对【哔哩哔哩、微博、油管、知乎】的开屏广告和应用内广告进行处理，是对【AdvertisingLite.conf】的去重和补充
 
 # 引用地址 https://github.com/ddgksf2013/Cuttlefish/blob/master/Rewrite/MyAdRule.conf
@@ -139,7 +139,7 @@
 ;^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads url reject
 ;^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) url reject
 ;^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext url reject
-^https://[^.]+\.googlevideo\.com/.+&oad= url REJECT
+^https://[^.]+\.googlevideo\.com/.+&oad= url reject
 ^https://[^.]+\.googlevideo\.com/.+&ctier=[^A]& url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/youtube.js
 
 # 知乎 //103.41.167.226, 103.41.167.234, 103.41.167.235, 103.41.167.236, api.zhihu.com, appcloud2.zhihu.com, www.zhihu.com, zhuanlan.zhihu.com, static.zhihu.com
