--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -1,5 +1,5 @@
 # utf-8
-# 2022-07-12 17:10
+# 2022-07-12 17:16
 # 对【哔哩哔哩、微博、油管、知乎】的开屏广告和应用内广告进行处理，是对【AdvertisingLite.conf】的去重和补充
 
 # 引用地址 https://github.com/ddgksf2013/Cuttlefish/blob/master/Rewrite/MyAdRule.conf
@@ -56,6 +56,11 @@
 ^https\:\/\/(weixin110\.qq|security.wechat)\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/wechat110.js
 
 # 哔哩哔哩 //app.bilibili.com, api.bilibili.com, *.hdslb.com, api.biliapi.net, app.biliintl.com, api.vc.bilibili.com, manga.bilibili.com, api.live.bilibili.com
+
+## 屏蔽IP请求 //app.bilibili.com
+^https?:\/\/app\.bilibili\.com\/x\/resource\/ip url reject
+## 屏蔽DefaultWord  //app.bilibili.com
+^https?:\/\/app\.bilibili\.com\/bilibili\.app\.interface\.v1\.Search\/Default url reject
 ## 屏蔽首页右上活动 //app.bilibili.com
 ^https?:\/\/app\.bilibili\.com\/x\/resource\/top\/activity url reject-dict
 ## 启动时开启直连模式 //api.bilibili.com
