--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -1,5 +1,5 @@
 # utf-8
-# 2022-07-12 17:32
+# 2022-07-12 17:59
 # 对【哔哩哔哩、微博、油管、知乎】的开屏广告和应用内广告进行处理，是对【AdvertisingLite.conf】的去重和补充
 
 # 引用地址 https://github.com/ddgksf2013/Cuttlefish/blob/master/Rewrite/MyAdRule.conf
@@ -138,9 +138,9 @@
 ## 知乎处理用户信息 //api.zhihu.com
 ^https?:\/\/api\.zhihu\.com\/people\/ url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/zhihu.js
 ## 知乎信息流去广告 //api.zhihu.com
-^https?:\/\/api\.zhihu\.com\/(moments|topstory)(\/|\?)?(recommend|questions\/\d+\/feeds\?|action=|feed_type=)(?!\/people) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/zhihu.js
+^https?:\/\/api\.zhihu\.com\/(moments|topstory)(\/|\?)?(recommend|action=|feed_type=)(?!\/people) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/zhihu.js
 ## 知乎回答列表去广告 //api.zhihu.com
-^https?:\/\/api\.zhihu\.com\/(v4\/)?questions\/\d+\/answers\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/zhihu_app2smile.js
+^https?:\/\/api\.zhihu\.com\/(v4\/)?questions\/\d+ url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/zhihu.js
 ## 知乎获取黑名单 //api.zhihu.com
 ^https?:\/\/api\.zhihu\.com\/settings\/blocked_users url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/zhihu.js
 ## 知乎官方消息去广告 //api.zhihu.com
@@ -148,7 +148,7 @@
 ## 知乎预置关键词去广告 //api.zhihu.com
 ^https?:\/\/api\.zhihu\.com\/search\/preset_words\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/zhihu.js
 ## 优化软件配置 //appcloud2.zhihu.com
-^https?:\/\/appcloud2\.zhihu\.com\/v\d+\/config$ url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/zhihu_app2smile.js
+^https?:\/\/appcloud2\.zhihu\.com\/v\d+\/config url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/zhihu.js
 ## 知乎热搜去广告 //api.zhihu.com
 ^https?:\/\/api\.zhihu\.com\/search\/top_search\/tabs\/hot\/items url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/zhihu.js
 ## 知乎热榜去广告 //api.zhihu.com
@@ -162,11 +162,11 @@
 ## 知乎8.3.0移除推荐页顶部项 //api.zhihu.com
 ^https?:\/\/api\.zhihu\.com\/feed-root\/sections\/query\/v2 url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/zhihu.js
 ## 拦截知乎开屏广告 //api.zhihu.com
-^https?:\/\/api\.zhihu\.com\/commercial_api\/(real_time_launch_v2|app_float_layer$) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/zhihu_app2smile.js 
+^https?:\/\/api\.zhihu\.com\/commercial_api\/launch_v2\? url reject-dict 
 ## 知乎去除最常访问 //api.zhihu.com
 ^https?:\/\/api\.zhihu\.com\/moments\/recent url reject-dict
 ## 知乎去除回答下的广告 //www.zhihu.com
-^https?:\/\/www\.zhihu\.com\/api\/v4\/answers\/\d+\/recommendations url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/zhihu_app2smile.js
+^https?:\/\/www\.zhihu\.com\/api\/v4\/answers\/\d+\/recommendations url reject-dict
 ## 知乎其他广告拦截 //api.zhihu.com
 ^https?:\/\/api\.zhihu\.com\/(notifications\/v\d\/count|v\d\/package|me\/guides|drama\/living-info|ad|fringe|commercial|market\/popovers|.*featured-comment-ad|ad-style-service) url reject-dict
 ## 知乎拦截部分预加载 //www.zhihu.com
@@ -175,7 +175,6 @@
 ^https?:\/\/www\.zhihu\.com\/api\/v4/(questions|anwsers)\/\d+/related-readings url reject-dict
 ^https?:\/\/www\.zhihu\.com\/api\/v4\/hot_recommendation url reject-dict
 ^https?:\/\/www\.zhihu\.com\/commercial_api\/banners_v3\/mobile_banner url reject-dict
-^https?:\/\/www\.zhihu\.com\/api\/v4\/articles\/\d+\/recommendation url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/zhihu_app2smile.js
 ^https?:\/\/zhuanlan\.zhihu\.com\/api\/articles\/\d+\/recommendation url reject-dict
 ## 知乎品牌提问广告 //api.zhihu.com, www.zhihu.com
 ^https?:\/\/api\.zhihu\.com\/brand\/question\/\d+/card\? url reject-dict
