--- a/Clash for myself/clash.ini
+++ b/Clash for myself/clash.ini
@@ -1,4 +1,5 @@
 [custom]
+ruleset=REJECT,clash-domain:https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-clash.yaml
 ruleset=REJECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Hijacking/Hijacking.list
 ruleset=REJECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Privacy/Privacy.list
 ruleset=REJECT,clash-domain:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Privacy/Privacy_Domain.yaml
