--- a/Rewrites/WebPage.conf
+++ b/Rewrites/WebPage.conf
@@ -85,8 +85,8 @@
 ^https?:\/\/(www|m)\.baidu\.com(\/s\?word.*|\/from.*?\/s\?word.*|\/from.*?word=.*) url script-response-body https://raw.githubusercontent.com/limbopro/Adblock4limbo/main/Adguard/surge_baidu.js
 
 # 内容农场(bing) //www.bing.com
-^https?:\/\/(www\.bing)(\.\w{2,4}){1,2}\/(search\?.*|\?sa=|\?FORM)(?!.*?(apps=)).* url script-response-body https://raw.githubusercontent.com/limbopro/Adblock4limbo/main/Adguard/Adblock4limbo.js
+^https?:\/\/(www\.bing)(\.\w{2,4}){1,2}\/(search\?.*|\?sa=|\?FORM)(?!.*?(apps=)).* url response-body <head> response-body <head><link rel="stylesheet" href="https://raw.githubusercontent.com/RuCu6/QuanX/main/Css/Adblock4limbo.user.css" type="text/css" /><script type="text/javascript" async="async" src="https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Adblock4limbo.user.js"></script>
 # 内容农场(google) //www.google.cn
-^https?:\/\/(www\.google)(\.\w{2,4}){1,2}\/search\?(?!.*?(apps=)).* url script-response-body https://raw.githubusercontent.com/limbopro/Adblock4limbo/main/Adguard/Adblock4limbo.js
+^https?:\/\/(www\.google)(\.\w{2,4}){1,2}\/search\?(?!.*?(apps=)).* url response-body <head> response-body <head><link rel="stylesheet" href="https://raw.githubusercontent.com/RuCu6/QuanX/main/Css/Adblock4limbo.user.css" type="text/css" /><script type="text/javascript" async="async" src="https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Adblock4limbo.user.js"></script>
 
 hostname = *.google.cn, www.firefox.com.cn, zhidao.baidu.com, www.baidu.com, m.baidu.com, www.bing.com
