--- a/Rewrites/MediaPage.conf
+++ b/Rewrites/MediaPage.conf
@@ -1,5 +1,5 @@
 # utf-8
-# 2022-06-08 17:24
+# 2022-07-13 10:46
 # 引用地址 https://github.com/ddgksf2013/Cuttlefish/blob/master/Html/WebAdBlock.conf
 # 引用地址 https://github.com/limbopro/Adblock4limbo/blob/main/Adblock4limbo.conf
 
@@ -44,4 +44,7 @@ https://js.tvn.cc/static/cfo.min.js url echo-response * echo-response https://ra
 # 梨播 libvio (https://www.libvio.me/ & https://www.libvio.com/) //www.libvio.me
 ^https?:/\/www\.libvio\.(me\/$|me\/(detail|play)\/[0-9a-z-]+\.html$) url response-body <head> response-body <head><link rel="stylesheet" href="https://raw.githubusercontent.com/RuCu6/QuanX/main/Css/libvio.css" type="text/css">
 
-hostname = cupfox.app, www.btbdys.com, cokemv.me, www.lezhutv.com, www.bimi*.net, www.o8tv.com, 555dy.vip, www.5*.com, www.5*.cc, gimytv.app, ddrk.me, www.tkys.tv, www.qianoo.cn, *.zhenbuka*.*, *.tvn.cc, www.libvio.me
+# www.ttsp.tv //www.ttsp.tv
+^https?:\/\/(www\.ttsp\.tv)(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|gif|ico|mp3|mp4|svg|tff|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Adblock4limbo.js
+
+hostname = cupfox.app, www.btbdys.com, cokemv.me, www.lezhutv.com, www.bimi*.net, www.o8tv.com, 555dy.vip, www.5*.com, www.5*.cc, gimytv.app, ddrk.me, www.tkys.tv, www.qianoo.cn, *.zhenbuka*.*, *.tvn.cc, www.libvio.me, www.ttsp.tv
