--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -1,5 +1,5 @@
 # utf-8
-# 2022-07-12 18:33
+# 2022-07-13 15:22
 # 对【哔哩哔哩、微博、油管、知乎】的开屏广告和应用内广告进行处理，是对【AdvertisingLite.conf】的去重和补充
 
 # 引用地址 https://github.com/ddgksf2013/Cuttlefish/blob/master/Rewrite/MyAdRule.conf
@@ -87,7 +87,7 @@
 ## 解除SIM卡地区限制 //app.biliintl.com
 ;(^https?:\/\/app\.biliintl.com\/intl\/.+)(&sim_code=\d+)(.+) url 302 $1$3
 (^https?://app\.biliintl\.com/(x/)?(intl|dm|reply|history|v\d/(fav|msgfeed)).+?)(&s_locale=zh-Hans_[A-Z]{2})(.+?)(&sim_code=\d+)(.+) url 302 $1&s_locale=zh-Hans_PH$6&sim_code=51503$8
-## 解除短信登录限制 //passport.biliintl.com
+## 解除短信登录限制 //passport.biliintl.com, app.biliintl.com
 ^https?://passport\.biliintl\.com/x/intl/passport-login/(sms/send|reg/sms|oauth2/access_token|login/sms) url script-request-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_bstar.js
 (^https?://passport\.biliintl\.com/x/intl/passport-login/.+)(&s_locale=zh-Hans_[A-Z]{2})(.+)(&sim_code=\d+)(.+) url 302 $1&s_locale=zh-Hans_PH$35&sim_code=51503$5
 ^https?://app\.biliintl\.com/(intl/gateway/v\d/app/data/report/heartbeat/mobile|x/(history|reply)/v\d/add) url script-request-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_bstar.js
