--- a/Rewrites/AppUnlock.conf
+++ b/Rewrites/AppUnlock.conf
@@ -1,15 +1,15 @@
 # utf-8
-# 2022-07-10 09:17
+# 2022-07-13 18:58
 # 引用地址 https://github.com/Semporia/TikTok-Unlock/blob/master/Quantumult%20X/TikTok-JP.conf
 # 引用地址 https://github.com/qiangxinglin/Emby/blob/main/QuantumultX/emby.conf
 
 # WPS解锁本地会员 //account.wps.cn, *account.wps.com
 ^https?:\/\/.*?account\.wps\.(com|cn)(:\d+)?\/api\/users\/\w+\/overview$ url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Crack/wps.js
 # WPS解锁稻壳会员 //*.docer.wps.cn, vipapi.wps.cn
-^https?:\/\/.+\.(docer.)?wps.cn\/(user\/v1\/vip|android\/mb\/buy|download\/v1\/ios|partner\/invoke\/usable|(api|rank)\/v1(\/mobile\/mb)?\/detail) url script-request-header https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Crack/wpsower.js
+^https?:\/\/.+\.(docer.)?wps.cn\/(user\/v\d\/vip|android\/mb\/buy|download\/v\d\/ios|partner\/invoke\/usable|(api|rank)\/v\d(\/mobile\/mb)?\/detail) url script-request-header https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Crack/wpsower.js
 # WPS解锁稻壳会员模板 //*.docer.wps.cn, vipapi.wps.cn, account.wps.cn
-^https?:\/\/account\.wps\.cn\/api\/v3\/mine\/vips url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Crack/wpsuser.js
-^https?:\/\/.+\.(docer.)?wps.cn\/(user\/v1\/vip|android\/mb\/buy|download\/v1\/ios|partner\/invoke\/usable|(api|rank)\/v1(\/mobile\/mb)?\/detail) url script-request-header https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Crack/wpsower.js
+^https?:\/\/account\.wps\.cn\/api\/v\d\/mine\/vips url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Crack/wpsuser.js
+^https?:\/\/.+\.(docer.)?wps.cn\/(user\/v\d\/vip|android\/mb\/buy|download\/v\d\/ios|partner\/invoke\/usable|(api|rank)\/v\d(\/mobile\/mb)?\/detail) url script-request-header https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Crack/wpsower.js
 
 # Notability解锁订阅 //notability.com
 ^https?:\/\/notability\.com\/subscriptions url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Crack/notability.js
