--- a/Rewrites/PornPage.conf
+++ b/Rewrites/PornPage.conf
@@ -1,5 +1,5 @@
 # utf-8
-# 2022-07-13 20:55
+# 2022-07-13 21:31
 # 引用地址 https://github.com/limbopro/Adblock4limbo/blob/main/Adblock4limbo.conf
 # 引用地址 https://github.com/ddgksf2013/Cuttlefish/blob/master/Html/WebAdBlock.conf
 # 引用地址 https://github.com/yqc007/QuantumultX/blob/master/JavDBCrack.js
@@ -42,10 +42,10 @@
 ^https?:\/\/(\w{0,3}(\.){0,1}(91porn)(\.)\w{0,3})(?!.*?(/(cdn-cgi)))(?!.*?(\.(css|js|jpeg|jpg|png|gif|ico|mp3|mp4|svg|tff|ttf|PNG|woff|woff2|m3u8))).* url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/91porn_qx.js
 
 # JavDB Unlock Premium (https://javdb.com/) //shukego.com, yiliang8888.com, 91mingyang.com, mnter.com
-;^https?:\/\/.+\.com\/api\/v1\/ads$ url reject-200
-;^https?:\/\/.+\.com\/api\/v1\/(movies\/.*\/play|startup) url script-request-header https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/Crack/javdb.js
+^https?:\/\/.+\.com\/api\/v\d\/ads$ url reject-200
+^https?:\/\/.+\.com\/api\/v\d\/(movies\/.*\/play|startup) url script-request-header https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/Crack/javdb.js
 
 # PornHub Unlock Premium //cn.pornhubpremium.com
-;^https?:\/\/cn\.pornhubpremium\.com\/ url script-request-header https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/Crack/pornhub.js
+^https?:\/\/cn\.pornhubpremium\.com\/ url script-request-header https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/Limbo/Crack/pornhub.js
 
-hostname = 18comic.org, 18comic.vip, www.wnacg.com, www.wnacg.org, www.javmost.xyz, javmost.xyz, www5.javmost.xyz, www5.javmost.com, *.javbus.*, avple.tv, assert.avple.tv, jable.tv, *.cloudfront.net, missav.com, 4hu.*, *.pornhub.com, 91porn.com
+hostname = 18comic.org, 18comic.vip, www.wnacg.com, www.wnacg.org, www.javmost.xyz, javmost.xyz, www5.javmost.xyz, www5.javmost.com, *.javbus.*, avple.tv, assert.avple.tv, jable.tv, *.cloudfront.net, missav.com, 4hu.*, *.pornhub.com, 91porn.com, shukego.com, yiliang8888.com, 91mingyang.com, mnter.com, cn.pornhubpremium.com
