--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -1,5 +1,5 @@
 # utf-8
-# 2022-07-14 15:36
+# 2022-07-14 15:41
 # 对【哔哩哔哩、微博、油管、知乎】的开屏广告和应用内广告进行处理，是对【AdvertisingLite.conf】的去重和补充
 
 # 引用地址 https://github.com/ddgksf2013/Cuttlefish/blob/master/Rewrite/MyAdRule.conf
@@ -74,6 +74,7 @@
 ## 屏蔽IP请求 //app.bilibili.com
 ^https?:\/\/app\.bilibili\.com\/x\/resource\/ip url reject
 ## 屏蔽DefaultWord //app.bilibili.com
+^https?:\/\/api\.bilibili\.com\/x\/push\/report url reject-dict
 ^https?:\/\/app\.bilibili\.com\/x\/v2\/search\/defaultwords url reject-dict
 ^https?:\/\/app\.bilibili\.com\/bilibili\.app\.interface\.v1\.Search\/Default url reject
 ## 热搜发现 //app.bilibili.com
