--- a/Rewrites/Backups/BiliBili.conf
+++ b/Rewrites/Backups/BiliBili.conf
@@ -1,4 +1,6 @@
 # 哔哩哔哩 //app.bilibili.com, api.bilibili.com, *.hdslb.com, api.biliapi.net, app.biliintl.com, api.vc.bilibili.com, manga.bilibili.com, api.live.bilibili.com
+## 青少年弹窗提示 //app.bilibili.com
+^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/teenagers\/timer\/get\? url reject-dict
 ## 屏蔽IP请求 //app.bilibili.com
 ^https?:\/\/app\.bilibili\.com\/x\/resource\/ip url reject
 ## 屏蔽DefaultWord  //app.bilibili.com
