--- a/QuantumultX/Rewrite/ScriptsCrack.conf
+++ b/QuantumultX/Rewrite/ScriptsCrack.conf
@@ -1,4 +1,4 @@
-hostname = mid.zineapi.com, buy.itunes.apple.com, api.revenuecat.com, api.mb3admin.com, api.neuralprisma.com, photos.adobe.io, api.flexibits.com, license.pdfexpert.com, bmall.camera360.com, ticktick.com, dida365.com, *.intsig.net, note.youdao.com, account.wps.cn, lchttpapi.xczim.com, dayone.*, www.40sishi.com, license.enpass.io, biz.caiyunapp.com, lapi.photomath.net, *.adobe.*, www.shencut.com, notability.com, restore-access.indream.app, appraven.net, www.evestudio.cn, flomoapp.com, cubox.pro, api-production.endel.io, subscription.grammarly.com, ios-api-2.duolingo.cn, spclient.wg.spotify.com, api-v3.speedtest.cn, api.tidal.com, *.*xima*.*, *.xmcdn.com, www.zhihu.com, link.zhihu.com, server.yoyiapp.com, gateway.caixin.com, ipadcms.caixin.com
+hostname = mid.zineapi.com, buy.itunes.apple.com, api.revenuecat.com, api.mb3admin.com, api.neuralprisma.com, photos.adobe.io, api.flexibits.com, license.pdfexpert.com, bmall.camera360.com, ticktick.com, dida365.com, *.intsig.net, note.youdao.com, account.wps.cn, lchttpapi.xczim.com, dayone.*, www.40sishi.com, license.enpass.io, biz.caiyunapp.com, lapi.photomath.net, *.adobe.*, www.shencut.com, notability.com, restore-access.indream.app, appraven.net, www.evestudio.cn, flomoapp.com, cubox.pro, api-production.endel.io, subscription.grammarly.com, ios-api-2.duolingo.cn, spclient.wg.spotify.com, api-v3.speedtest.cn, api.tidal.com, *.*xima*.*, *.xmcdn.com, www.zhihu.com, link.zhihu.com, server.yoyiapp.com
 
 
 # 01 Varlens 解锁PRO(by iOS黑科技)
@@ -112,11 +112,6 @@ hostname = mid.zineapi.com, buy.itunes.apple.com, api.revenuecat.com, api.mb3adm
 # 36 FIMO解锁终身会员
 ^https:\/\/server\.yoyiapp\.com\/fimo-user\/apple\/certificate$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/FiMoCameraFVIPCrack.js
 
-# 37 财新会员 解锁财新文章阅读与音频限制 @Functional_Store_Hub
-^https:\/\/gateway\.caixin\.com\/api\/app\-api\/auth\/(validate|validateAudioAuth) url script-request-header https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/CaiXin/Script/CaiXin.js
-
-# 38 财新周刊会员
-^https:\/\/ipadcms\.caixin\.com\/(api|tmp|power)\/(articles?|myfree(v\d+)?) url script-response-body https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/CaiXinWeekly/Script/CaiXinWeekly.js
 
 
 
