--- a/Clash for myself/clash.ini
+++ b/Clash for myself/clash.ini
@@ -17,7 +17,7 @@ ruleset=DIRECT,[]GEOIP,CN
 ruleset=Proxy,[]FINAL
 
 custom_proxy_group=Proxy`select`.*`[]DIRECT
-custom_proxy_group=YouTube`美|USA`.*`[]DIRECT
+custom_proxy_group=YouTube`select`美|USA`[]DIRECT
 custom_proxy_group=Asian Media`select`港|台|Hong Kong|Taiwan`[]DIRECT
 custom_proxy_group=Global Media`select`港|台|新|Hong Kong|Taiwan|Singapore`[]DIRECT
 
