--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -1,5 +1,5 @@
 # utf-8
-# 2022-07-15 09:54
+# 2022-07-19 23:51
 # 适用于 Quantumult X v1.0.30-build707
 #
 # GeoIP
@@ -81,7 +81,7 @@ https://raw.githubusercontent.com/RuCu6/QuanX/main/Rules/WeChat.list, tag=WeChat
 [rewrite_remote]
 https://raw.githubusercontent.com/RuCu6/QuanX/main/Rewrites/AdvertisingLite.conf, tag=AdvertisingLite, update-interval=-1, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/RuCu6/QuanX/main/Rewrites/MyBlockAds.conf, tag=MyBlockAds, update-interval=-1, opt-parser=false, enabled=true
-https://raw.githubusercontent.com/RuCu6/QuanX/main/Rewrites/TestFlightA.conf, tag=TestFlightA, update-interval=-1, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/RuCu6/QuanX/main/Rewrites/TestFlight.conf, tag=TestFlight, update-interval=-1, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/RuCu6/QuanX/main/Rewrites/WebPage.conf, tag=WebPage, update-interval=-1, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/RuCu6/QuanX/main/Rewrites/PornPage.conf, tag=PornPage, update-interval=-1, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/RuCu6/QuanX/main/Rewrites/AppUnlock.conf, tag=AppUnlock, update-interval=-1, opt-parser=false, enabled=true
