--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -1,5 +1,5 @@
 # utf-8
-# 2022-07-21 15:53
+# 2022-07-21 15:59
 # 对【哔哩哔哩、微博、油管、知乎】的开屏广告和应用内广告进行处理，是对【AdvertisingLite.conf】的去重和补充
 
 # 屏蔽广告联盟：快手联盟,腾讯优量汇,穿山甲 //api-access.pangolin-sdk-toutiao.com, open.e.kuaishou.com, mi.gdt.qq.com
@@ -111,11 +111,11 @@
 
 # 油管 //-redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com
 (^https?:\/\/[\w-]+\.googlevideo\.com\/(?!dclk_video_ads).+?)&ctier=L(&.+?),ctier,(.+) url 302 $1$2$3
-^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad url reject
-^https?:\/\/youtubei\.googleapis\.com\/youtubei\/v\d\/player\/ad_break url reject
-^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads url reject
-^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) url reject
-^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext url reject
+^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad url reject-dict
+^https?:\/\/youtubei\.googleapis\.com\/youtubei\/v\d\/player\/ad_break url reject-dict
+^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads url reject-dict
+^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) url reject-dict
+^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext url reject-dict
 
 # 知乎 //103.41.167.226, 103.41.167.234, 103.41.167.235, 103.41.167.236, api.zhihu.com, www.zhihu.com, appcloud2.zhihu.com, zhuanlan.zhihu.com, static.zhihu.com
 ## 知乎的广告拦截，依赖于拦截 118.89.204.198 和 2402:4e00:1200:ed00:0:9089:6dac:96b6 这两个地址的请求，迫使知乎 APP 回退到以 api.zhihu.com 请求数据，才能进行 MITM
