--- a/Rewrites/Backups/ZhiHu.conf
+++ b/Rewrites/Backups/ZhiHu.conf
@@ -60,3 +60,5 @@
 ^https?:\/\/(api\.zhihu\.com|(103\.41\.167\.(226|234|235|236)))\/settings\/new\/notification url reject-dict
 ## 屏蔽网页版强制登陆弹窗 //static.zhihu.com
 ^https?:\/\/static\.zhihu\.com\/[^\/]+\/(main|column)\.signflow\.[^.]+.js url reject-200
+
+hostname = 103.41.167.226, 103.41.167.234, 103.41.167.235, 103.41.167.236, api.zhihu.com, www.zhihu.com, appcloud2.zhihu.com, zhuanlan.zhihu.com, static.zhihu.com
