--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -80,10 +80,8 @@
 ^https?:\/\/api\.(bilibili|biliapi)\.(com|net)\/pgc\/page\/cinema\/tab\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 应用开屏去广告 //app.bilibili.com
 ^https:\/\/app\.bilibili\.com\/x\/v2\/splash\/show url reject-dict
-## 开屏广告预加载,推荐去广告,标签页处理 //app.bilibili.com
-^https:\/\/app\.bilibili\.com\/x\/(v2\/(splash\/list|feed\/index)|resource\/show\/tab) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
-## 去除统一设置的皮肤 //app.bilibili.com
-^https?:\/\/app\.bilibili\.com\/x\/resource\/show\/skin\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
+## 开屏广告预加载,推荐去广告,标签页处理,去除统一设置的皮肤 //app.bilibili.com
+^https:\/\/app\.bilibili\.com\/x\/(v2\/(splash\/list|feed\/index)|resource\/show\/(tab|skin\?)) url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 1080P高码率+4K画质(番剧和影视除外) //app.bilibili.com
 ^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/myinfo\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/BiliBili/bilibili_diy.js
 ## 热搜发现 //app.bilibili.com
