--- a/Rewrites/MyBlockAds.conf
+++ b/Rewrites/MyBlockAds.conf
@@ -53,15 +53,8 @@
 ^https\:\/\/(weixin110\.qq|security.wechat)\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi\? url script-response-body https://raw.githubusercontent.com/RuCu6/QuanX/main/Scripts/wechat110.js
 
 # 哔哩哔哩 //app.bilibili.com, api.bilibili.com, api.vc.bilibili.com, manga.bilibili.com, api.biliapi.net, api.live.bilibili.com
-## 青少年弹窗提示 //app.bilibili.com
-^https?:\/\/app\.bilibili\.com\/x\/v\d\/account\/teenagers\/timer\/get\? url reject-dict
-## 屏蔽IP请求 //app.bilibili.com
-^https?:\/\/app\.bilibili\.com\/x\/resource\/ip url reject-dict
-## 屏蔽DefaultWord  //app.bilibili.com
-^https?:\/\/app\.bilibili\.com\/x\/v\d\/search\/defaultwords url reject-dict
-^https?:\/\/app\.bilibili\.com\/bilibili\.app\.interface\.v1\.Search\/Default url reject-dict
-## 屏蔽首页右上活动[需卸载重装] //app.bilibili.com
-^https?:\/\/app\.bilibili\.com\/x\/resource\/top\/activity url reject-dict
+## 屏蔽IP请求,屏蔽首页右上活动,屏蔽DefaultWord,屏蔽青少年弹窗提示 //app.bilibili.com
+^https?:\/\/app\.bilibili\.com\/(x\/(resource\/(ip|top\/activity)|v\d\/(search\/defaultwords|account\/teenagers\/timer\/get))|bilibili\.app\.interface\.v1\.Search\/Default) url reject-dict
 ## Material_Ad //api.bilibili.com
 ^https?:\/\/api\.bilibili\.com\/x\/vip\/ads\/material\/report url reject-dict
 ## 小卡片广告 //api.bilibili.com
